<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>c_pc2_iterator</name>
  <version>0.0.0</version>
  <description>Package containing PointCloud2 creation and manipulation facilitator</description>
  <maintainer email="fofolevrai@proton.me">fofolevrai</maintainer>
  <author email="fofolevrai@proton.me">fofolevrai</author>
  <license>BSD-3-Clause</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
